--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css" >
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,700&display=swap" >
     <title>React App</title>
   </head>
   <body>
